--- a/src/Components/HomePage/HomePage.module.css
+++ b/src/Components/HomePage/HomePage.module.css
@@ -10,6 +10,7 @@
     display: flex;
     flex-direction: column;
     flex: 1;
+    overflow: auto;
 }
 
 .insideBelowHeader {
@@ -17,6 +18,7 @@
     flex-direction: row;
     height: 100%;
 
+    /* overflow: auto; */
 }
 
 .content {
@@ -26,4 +28,5 @@
   width: 100%;
   padding-bottom: 30px;
   padding-left: 30px;
+    /* overflow: auto; */
 }
