--- a/src/Components/Sidebar/Sidebar.module.css
+++ b/src/Components/Sidebar/Sidebar.module.css
@@ -9,6 +9,5 @@ width... responsive maybe. maybe i can drag it? fixed for now i guess at 300px
     height: 100%;
     background-color: var(--background-color-dark);
     padding-right: 30px;
-
-
+    max-width: 15%;
 }
